add getservice
